--- a/config/home/sources/waybar/config
+++ b/config/home/sources/waybar/config
@@ -55,7 +55,7 @@
     "mpd": {
       "format": "{stateIcon} {title} - {albumArtist}",
       "format-disconnected": "MPD (disconnected)",
-      "format-stopped": "  --------------------------------",
+      "format-stopped": "  ---",
       "interval": 10,
       "max-length": 35,
       "state-icons": {
