fixed layout toggle keybind

--- a/config/home/sources/hypr/sources/keybinds.conf
+++ b/config/home/sources/hypr/sources/keybinds.conf
@@ -50,7 +50,7 @@ bindd  = $mod           , T                    , View System Monitor            
 bindd  = $mod           , Q                    , Kill Active Window              , killactive             , null
 bindd  = $mod           , P                    , Toggle Floating Window          , togglefloating         ,
 bindd  = $mod           , O                    , Toggle Fullscreen Window        , fullscreen             ,
-bindd  = $mod           , U                    , Cycle Left and Bottom Layour    , layoutmsg              , orientationcycle left bottom
+bindd  = $mod           , U                    , Cycle Left and Bottom Layout    , layoutmsg              , orientationcycle left top
 
 # Window Focus
 bindd  = $mod           , h                    , Focus Left Window               , movefocus              , l
