toggle touchpad keybind added

--- a/config/home/sources/hypr/sources/keybinds.conf
+++ b/config/home/sources/hypr/sources/keybinds.conf
@@ -150,6 +150,9 @@ bindld  =               , XF86MonBrightnessDown, Decrease Screen Brightness     
 # Color Picker
 bindd  =                , F8                   , Activate Color Picker           , exec                   , hyprpicker | wl-copy
 
+# Toggle Touchpad
+bindld  =               , XF86TouchpadToggle   , Toggle Touchpad                 , exec                   , ~/.config/hypr/scripts/toggleTouchpad.sh
+
 # Screenshots
 bindld =                , Print                , Screenshot (Select Area)        , exec                   , grimblast --notify copysave area
 bindld = $mod           , Print                , Screenshot (Focused Window)     , exec                   , grimblast --notify copysave active
