keybinds aren't working

--- a/config/home/sources/hypr/sources/keybinds.conf
+++ b/config/home/sources/hypr/sources/keybinds.conf
@@ -148,10 +148,10 @@ bindld  =               , XF86MonBrightnessUp  , Increase Screen Brightness     
 bindld  =               , XF86MonBrightnessDown, Decrease Screen Brightness      , exec                   , brightnessctl s 2%-
 
 # Color Picker
-bindd  =                , F8                   , Activate Color Picker           , exec                   , hyprpicker | wl-copy
+bindd   =               , F8                   , Activate Color Picker           , exec                   , hyprpicker | wl-copy
 
 # Toggle Touchpad
-bindld  =               , XF86TouchpadToggle   , Toggle Touchpad                 , exec                   , ~/.config/hypr/scripts/toggleTouchpad.sh
+bindd   = $mod          , menu                 , Toggle Touchpad                 , exec                   , sh ~/.config/hypr/scripts/toggleTouchpad.sh
 
 # Screenshots
 bindld =                , Print                , Screenshot (Select Area)        , exec                   , grimblast --notify copysave area
