removed thunderbird window rules

--- a/config/home/sources/hypr/sources/windowRules.conf
+++ b/config/home/sources/hypr/sources/windowRules.conf
@@ -26,11 +26,11 @@ windowrulev2 = move 25% 25%,class:betterbird,title:
 #### Thunderbird Popups ####
 # Edit Calendars
 windowrulev2 = float,class:thunderbird,title:Edit Item
-windowrulev2 = float,class:thunderbird,title:
+# windowrulev2 = float,class:thunderbird,title:
 windowrulev2 = size 50% 50%,class:thunderbird,title:Edit Item
-windowrulev2 = size 50% 50%,class:thunderbird,title:
+# windowrulev2 = size 50% 50%,class:thunderbird,title:
 windowrulev2 = move 25% 25%,class:thunderbird,title:Edit Item
-windowrulev2 = move 25% 25%,class:thunderbird,title:
+# windowrulev2 = move 25% 25%,class:thunderbird,title:
 # Login Popup
 # windowrulev2 = float,class:thunderbird,title:^Enter credentials for.*$
 # windowrulev2 = size 50% 50%,class:thunderbird,title:^Enter credentials for.*$
