keepass window rules

--- a/config/home/sources/hypr/sources/windowRules.conf
+++ b/config/home/sources/hypr/sources/windowRules.conf
@@ -10,6 +10,11 @@ windowrulev2 = size 75% 75%,title:SystemMonitor
 windowrulev2 = float,title:SystemMonitor
 windowrulev2 = move 12.5% 12.5%,title:SystemMonitor
 
+#### KeePassXC Popup ####
+windowrulev2 = float,class:org.keepassxc.KeePassXC,title:Unlock Database - KeePassXC
+windowrulev2 = size 40% 40%,class:org.keepassxc.KeePassXC,title:Unlock Database - KeePassXC
+windowrulev2 = move 30% 30%,class:org.keepassxc.KeePassXC,title:Unlock Database - KeePassXC
+
 #### Betterbird Popups ####
 # Edit Calendars
 windowrulev2 = float,class:betterbird,title:Edit Item
