--- a/config/home/sources/yazi/yazi.toml
+++ b/config/home/sources/yazi/yazi.toml
@@ -19,7 +19,7 @@ pdf = [
   { run = 'zathura "$@"',                   orphan = true,        desc = "zathura"     },
   { run = 'zen-browser "$@"',               orphan = true,        desc = "Zen Browser" },
   { run = 'libreoffice "$@"',               orphan = true,        desc = "LibreOffice" },
-  # { run = 'librewolf "$@"',                 orphan = true,        desc = "LibreWolf"   },
+  { run = 'librewolf "$@"',                 orphan = true,        desc = "LibreWolf"   },
 ]                                           
 video = [                                   
   { run = 'mpv "$@"',                       orphan = true,        desc = "mpv"         },
@@ -36,7 +36,7 @@ image = [
 office = [                                  
   { run = 'libreoffice "$@"',               orphan = true,        desc = "LibreOffice" },
   { run = 'zen-browser "$@"',               orphan = true,        desc = "Zen Browser" },
-  # { run = 'librewolf "$@"',                 orphan = true,        desc = "LibreWolf"   },
+  { run = 'librewolf "$@"',                 orphan = true,        desc = "LibreWolf"   },
 ]                                           
 directory = [
   { run = 'foot -D "$@"',                   orphan = true,        desc = "terminal"    },
