--- a/config/home/sources/hypr/hyprlock.conf
+++ b/config/home/sources/hypr/hyprlock.conf
@@ -66,7 +66,7 @@ input-field {
   fail_transition = 300
 
   capslock_color = rgba(250, 189, 47, 0.35)
-  numlock_color = rgba(250, 189, 47, 0.35)
+  numlock_color = -1
   bothlock_color = -1
 
   size = 290, 30
