--- a/config/home/sources/hypr/sources/windowRules.conf
+++ b/config/home/sources/hypr/sources/windowRules.conf
@@ -15,28 +15,10 @@ windowrulev2 = float,class:org.keepassxc.KeePassXC,title:Unlock Database - KeePa
 windowrulev2 = size 40% 40%,class:org.keepassxc.KeePassXC,title:Unlock Database - KeePassXC
 windowrulev2 = move 30% 30%,class:org.keepassxc.KeePassXC,title:Unlock Database - KeePassXC
 
-#### Betterbird Popups ####
-# Edit Calendars
-windowrulev2 = float,class:betterbird,title:Edit Item
-windowrulev2 = float,class:betterbird,title:
-windowrulev2 = size 50% 50%,class:betterbird,title:Edit Item
-windowrulev2 = size 50% 50%,class:betterbird,title:
-windowrulev2 = move 25% 25%,class:betterbird,title:Edit Item
-windowrulev2 = move 25% 25%,class:betterbird,title:
-# Login Popup
-# windowrulev2 = float,class:betterbird,title:^Enter credentials for.*$
-# windowrulev2 = size 50% 50%,class:betterbird,title:^Enter credentials for.*$
-# windowrulev2 = move 25% 25%,class:betterbird,title:^Enter credentials for.*$
-
 #### Thunderbird Popups ####
 # Edit Calendars
 windowrulev2 = float,class:thunderbird,title:Edit Item
-# windowrulev2 = float,class:thunderbird,title:
 windowrulev2 = size 50% 50%,class:thunderbird,title:Edit Item
-# windowrulev2 = size 50% 50%,class:thunderbird,title:
 windowrulev2 = move 25% 25%,class:thunderbird,title:Edit Item
-# windowrulev2 = move 25% 25%,class:thunderbird,title:
-# Login Popup
-# windowrulev2 = float,class:thunderbird,title:^Enter credentials for.*$
-# windowrulev2 = size 50% 50%,class:thunderbird,title:^Enter credentials for.*$
-# windowrulev2 = move 25% 25%,class:thunderbird,title:^Enter credentials for.*$
+# Calendar Item Info
+
