--- a/config/home/sources/yazi/keymap.toml
+++ b/config/home/sources/yazi/keymap.toml
@@ -123,11 +123,13 @@ keymap = [
 
 	# Goto
 	{ on = [ "g", "h" ],        run = "cd ~",                                               desc = "Go to the home directory" },
-	{ on = [ "g", "s" ],        run = "cd ~/Documents/School",                              desc = "Go to the home directory" },
-	{ on = [ "g", "p" ],        run = "cd ~/Documents/Personal",                            desc = "Go to the home directory" },
+	{ on = [ "g", "s" ],        run = "cd ~/Documents/School",                              desc = "Go to the school directory" },
+	{ on = [ "g", "p" ],        run = "cd ~/Documents/Personal",                            desc = "Go to the personl directory" },
   { on = [ "g", "c" ],        run = "cd ~/.dotfiles",                                     desc = "Go to the config directory" },
 	{ on = [ "g", "d" ],        run = "cd ~/Downloads",                                     desc = "Go to the downloads directory" },
 	{ on = [ "g", "t" ],        run = "cd /tmp",                                            desc = "Go to the temporary directory" },
+	{ on = [ "g", "m" ],        run = "cd ~/Music/musicStagingGround",                      desc = "Go to the Music Staging Ground directory" },
+	{ on = [ "g", "/" ],        run = "cd /",                                               desc = "Go to the root directory" },
 	{ on = [ "g", "<Space>" ],  run = "cd --interactive",                                   desc = "Go to a directory interactively" },
 
 	# Help
