--- a/config/home/sources/hypr/sources/monitors.conf
+++ b/config/home/sources/hypr/sources/monitors.conf
@@ -3,3 +3,5 @@
 ################
 
 monitor = eDP-1, 1920x1080, 0x0, 1
+monitor = HDMI-A-1, preferred, auto-right, 1
+monitor = , preferred, auto-right, 1
