--- a/config/home/sources/hypr/sources/keybinds.conf
+++ b/config/home/sources/hypr/sources/keybinds.conf
@@ -90,8 +90,8 @@ bindd  = $mod           , 9                    , Focus Workspace 9              
 bindd  = $mod           , 0                    , Focus Workspace 10              , workspace                     , 10
 bindd  = $mod           , grave                , Toggle Scratchpad               , togglespecialworkspace        , magic
 bindd  = $mod SHIFT     , grave                , Move Window to Scratchpad       , movetoworkspace               , special:magic
-binded = $mod           , equal                , Focus Next Workspace            , workspace                     , m+1
-binded = $mod           , minus                , Focus Previous Workspace        , workspace                     , m-1
+binded = $mod           , equal                , Focus Next Workspace            , workspace                     , +1
+binded = $mod           , minus                , Focus Previous Workspace        , workspace                     , -1
 bindd  = $mod           , BackSpace            , Focus Most Recent Workspace     , workspace                     , previous
 
 # Move Windows Between Workspaces
@@ -105,8 +105,8 @@ bindd  = $mod SHIFT     , 7                    , Move Window to Workspace 7     
 bindd  = $mod SHIFT     , 8                    , Move Window to Workspace 8       , movetoworkspace              , 8
 bindd  = $mod SHIFT     , 9                    , Move Window to Workspace 9       , movetoworkspace              , 9
 bindd  = $mod SHIFT     , 0                    , Move Window to Workspace 10      , movetoworkspace              , 10
-binded = $mod SHIFT     , equal                , Move Window to Next Workspace    , movetoworkspace              , +1
-binded = $mod SHIFT     , minus                , Move Window to Previous Workspace, movetoworkspace              , -1
+binded = $mod SHIFT     , equal                , Move Window to Next Workspace    , movetoworkspace              , r+1
+binded = $mod SHIFT     , minus                , Move Window to Previous Workspace, movetoworkspace              , r-1
 bindd  = $mod SHIFT     , BackSpace            , Move Window to Recent Workspace  , movetoworkspace              , previous
 
 # Manage Windows With Mouse
