--- a/config/home/sources/hypr/sources/autostart.conf
+++ b/config/home/sources/hypr/sources/autostart.conf
@@ -1,7 +1,7 @@
 # Background Processes
 exec-once = hyprpaper
 exec-once = hypridle
-exec-once = mako
+# exec-once = mako
 exec-once = waybar
 
 # exec-once = /usr/lib/polkit-kde-authentication-agent-1
