--- a/config/home/sources/hypr/sources/keybinds.conf
+++ b/config/home/sources/hypr/sources/keybinds.conf
@@ -88,8 +88,8 @@ bindd  = $mod           , 7                    , Focus Workspace 7              
 bindd  = $mod           , 8                    , Focus Workspace 8               , workspace                     , 8
 bindd  = $mod           , 9                    , Focus Workspace 9               , workspace                     , 9
 bindd  = $mod           , 0                    , Focus Workspace 10              , workspace                     , 10
-bindd  = $mod           , grave                , Toggle Scratchpad               , togglespecialworkspace        , magic
-bindd  = $mod SHIFT     , grave                , Move Window to Scratchpad       , movetoworkspace               , special:magic
+# bindd  = $mod           , grave                , Toggle Scratchpad               , togglespecialworkspace        , magic
+# bindd  = $mod SHIFT     , grave                , Move Window to Scratchpad       , movetoworkspace               , special:magic
 binded = $mod           , equal                , Focus Next Workspace            , workspace                     , +1
 binded = $mod           , minus                , Focus Previous Workspace        , workspace                     , -1
 bindd  = $mod           , BackSpace            , Focus Most Recent Workspace     , workspace                     , previous
@@ -175,3 +175,6 @@ bindd  = $mod           , comma                , Create Latex File Menu         
 bindd  = $mod SHIFT     , comma                , Create Basic Lecture            , exec                          , courseTools --create-basic-lecture
 bindd  = $mod           , period               , Course Bookmarks Menu           , exec                          , $latxBookMenu
 bindd  = $mod SHIFT     , period               , Edit Last Lecture               , exec                          , courseTools --edit-current-lecture
+
+# Hyprexpo
+# bind = SUPER, grave, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
