partial refactoring of hyprland config in homemanager

--- a/config/home/sources/hypr/hyprland.conf
+++ b/config/home/sources/hypr/hyprland.conf
@@ -1,3 +1,5 @@
+# plugin=/nix/store/7y7lna0gnfhgwsrg5d66ra97wrq1pry8-hyprexpo-0.41.2/lib/libhyprexpo.so
+
 ##### VARIABLES ######
 source = ~/.config/hypr/sources/variables.conf
 
